--- a/public/index.html
+++ b/public/index.html
@@ -5,35 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ALGO</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- Add Chart.js CDN -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-    <h1>New beginnings</h1>
-    <p>Next update in: <span id="countdown">60</span> seconds</p>
-    <table>
-        <thead>
-            <tr>
-                <th>ETF</th>
-                <th>Price</th>
-                <th>Signal</th>
-            </tr>
-        </thead>
-        <tbody id="etf-table-body">
-            <!-- Data will be populated here -->
-        </tbody>
-    </table>
+    <!-- Login Modal -->
+    <div id="login-modal" class="modal">
+        <div class="modal-content">
+            <h2>Enter Access Code</h2>
+            <input type="password" id="access-code" placeholder="Enter code" />
+            <button onclick="validateCode()">Submit</button>
+            <p id="error-message" style="color:red; display:none;">Invalid code. Please try again.</p>
+        </div>
+    </div>
 
-    <!-- Chart Container -->
-    <div id="chart-container">
-        <canvas id="etf-chart"></canvas>
-        <div class="chart-buttons">
-            <button onclick="loadChart('1d')">1 Day</button>
-            <button onclick="loadChart('1mo')">1 Month</button>
-            <button onclick="loadChart('1y')">1 Year</button>
+    <!-- Main Content (hidden initially) -->
+    <div id="main-content" style="display:none;">
+        <p>Next update in: <span id="countdown">60</span> seconds</p>
+        <table>
+            <thead>
+                <tr>
+                    <th>ETF</th>
+                    <th>Price</th>
+                    <th>Signal</th>
+                </tr>
+            </thead>
+            <tbody id="etf-table-body">
+                <!-- Data will be populated here -->
+            </tbody>
+        </table>
+
+        <!-- Chart Container -->
+        <div id="chart-container">
+            <canvas id="etf-chart"></canvas>
+            <div class="chart-buttons">
+                <button onclick="loadChart('1d')">1 Day</button>
+                <button onclick="loadChart('1mo')">1 Month</button>
+                <button onclick="loadChart('1y')">1 Year</button>
+            </div>
         </div>
     </div>
 
     <script src="script.js"></script>
 </body>
 </html>
+
+
